# 2022_HomeRun

./: .gitmodules  2022_HomeRun.cppcheck  CMakeLists.txt  Doxyfile  build.gradle  compile_commands.json  csvToCPPArray.py  csvToCPPArrayConverter.py  data.csv
2022_HomeRun-cppcheck-build-dir/: ActiveConveyorFeederMotor.a1  ActiveConveyorMotor.a1  ActiveFeederMotor.a1  ActiveIntakeMotor.a1  ActiveShooter.a1  CANSparkMaxWrapper.a1  ChangeIntakePosition.a1  Climber.a1  ClimberActiveMotor.a1  Conveyor.a1  Drive.a1  Drivetrain.a1  Gearbox.a1  Hallsecurity.a1  Hood.a1  Intake.a1  JsonConfig.a1  N.a1  NArray.a1  NArray.s1  NFile.a1  NFile.s1  NLCharacterizationTable.a1  NLDriveTrainSpecs.a1  NLKin.a1  NLKinLimits.a1  NLMotorCharacterization.a1  NLOdometry.a1  NLPathGeometry.a1  NLRamseteFollower.a1  NLRamseteFollower.s1  NLRobotPose.a1  NLRobotPose.s1  NLTrajectoryPack.a1  NMath.a1  NMath.s1  NMatrix3x3.a1  NMatrix3x3.s1  NString.a1  NString.s1  (+22 more)
src/main/config/: config.json
src/main/cpp/: HallSecurity.cpp  Hood copy.cpp  Hood.cpp  Robot.cpp  RobotContainer.cpp  SetShooterAuto.cpp  Shooter.cpp  Turret.cpp
src/main/cpp/commands/: SetShooterAuto.cpp
src/main/cpp/commands/Climber/: Climb.cpp  ClimberActiveMotor.cpp
src/main/cpp/commands/Conveyor/: ActiveConveyorFeederMotor.cpp  ActiveConveyorFeederMotor2.cpp  ActiveConveyorMotor.cpp  ActiveFeederMotor.cpp  Chainball.cpp  IntakeConveyorMode.cpp  UnblockConveyorMotor.cpp  UnblockFeederMotor.cpp
src/main/cpp/commands/Feeder/: ActiveFeederMotor.cpp  UnblockFeederMotor.cpp
src/main/cpp/commands/Intake/: ActiveIntakeMotor.cpp  ChangeIntakePosition.cpp  DebloquedIntakeMotor.cpp  UnblockIntakeMotor.cpp
src/main/cpp/commands/Shoot/: ActiveShooter.cpp  NearShoot.cpp  SetShooterAuto.cpp  TurnHood.cpp  TurnHoodBas.cpp  UnblockShooter.cpp
src/main/cpp/commands/auto/: Auto.cpp  AutoBackToShoot.cpp  AutoMoovBackward.cpp  AutoMoovToBall.cpp  AutoTurn.cpp
src/main/cpp/commands/autonomous/: SimpleAutonomous.cpp
src/main/cpp/commands/drivetrain/: Drive.cpp
src/main/cpp/commands/driving/: Drive.cpp
src/main/cpp/commands/gearbox/: SwitchGearboxMode.cpp
src/main/cpp/commands/global/: CompleteInit.cpp  SimpleAutonomous.cpp
src/main/cpp/commands/tests/: DrivetrainDirectionTest.cpp  DrivetrainTest.cpp
src/main/cpp/lib/: Hallsecurity.cpp  JsonConfig.cpp  NLKin.cpp  NLKinLimits.cpp  NLRamseteFollower.cpp  NLRobotPose.cpp
src/main/cpp/lib/N/Containers/: NArray.cpp
src/main/cpp/lib/N/Core/: N.cpp
src/main/cpp/lib/N/File/: NFile.cpp
src/main/cpp/lib/N/Maths/: NMath.cpp  NMatrix3x3.cpp
src/main/cpp/lib/N/Miscellaneous/: NString.cpp
src/main/cpp/lib/NL/MotionControl/: NLDriveTrainSpecs.cpp  NLOdometry.cpp
src/main/cpp/lib/NL/MotionControl/Characterization/: NLCharacterizationTable.cpp  NLMotorCharacterization.cpp
src/main/cpp/lib/NL/MotionControl/Path/Geometry/: NLPathGeometry.cpp
src/main/cpp/lib/NL/MotionControl/Trajectory/: NLTrajectoryPack.cpp
src/main/cpp/lib/wrappers/: CANSparkMaxWrapper.cpp
src/main/cpp/subsystem/: Hood.cpp  Shooter.cpp  ShooterFeedingSystem.cpp  Turret.cpp
src/main/cpp/subsystems/: Camera.cpp  Climber.cpp  Conveyor.cpp  Drivetrain.cpp  DrivetrainOmni.cpp  Feeder.cpp  Gearbox.cpp  Hood.cpp  Intake.cpp  Shooter.cpp  Turret.cpp
src/main/include/: Constants.h  HallSecurity.h  Hood copy.h  Hood.h  Robot.h  RobotContainer.h  SetShooterAuto.h  Turret.h
src/main/include/commands/: SetShooterAuto.h
src/main/include/commands/Climber/: Climb.h  ClimberActiveMotor.h
src/main/include/commands/Conveyor/: ActiveConveyorFeederMotor.h  ActiveConveyorFeederMotor2.h  ActiveConveyorMotor.h  ActiveFeederMotor.h  Chainball.h  IntakeConveyorMode.h  UnblockConveyorMotor.h  UnblockFeederMotor.h
src/main/include/commands/Feeder/: ActiveFeederMotor.h  UnblockFeederMotor.h
src/main/include/commands/Intake/: ActiveIntakeMotor.h  ChangeIntakePosition.h  DebloquedIntakeMotor.h  UnblockIntakeMotor.h
src/main/include/commands/Shoot/: ActiveShooter.h  NearShoot.h  SetShooterAuto.h  TurnHood.h  TurnHoodBas.h  UnblockShooter.h
src/main/include/commands/auto/: Auto.h  AutoBackToShoot.h  AutoMoovBackward.h  AutoMoovToBall.h  AutoTurn.h
src/main/include/commands/autonomous/: SimpleAutonomous.h
src/main/include/commands/drivetrain/: Drive.h
src/main/include/commands/driving/: Drive.h
src/main/include/commands/gearbox/: SwitchGearboxMode.h
src/main/include/commands/global/: CompleteInit.h
src/main/include/commands/tests/: DrivetrainDirectionTest.h  DrivetrainTest.h
src/main/include/lib/: HallSecurity.h  JsonConfig.h  RobotError.h  Utils.h
src/main/include/lib/N/: NCStandard.h  NCore.h  NErrorHandling.h  NFlags.h  NMath.h  NMatrix.h  NMemory.h  NString.h  NType.h  NVecLimits.h
src/main/include/lib/N/Containers/: NArray.h
src/main/include/lib/N/Core/: NLimits.h  NSafeConversion.h
src/main/include/lib/N/File/: NFile.h
src/main/include/lib/N/Maths/: NMatrix3x3.h  NVec2f32.h  NVec3f32.h  NVec4f32.h  NVecLimits.h
src/main/include/lib/NL/MotionControl/: NLDriveTrainSpecs.h  NLKin.h  NLKinLimits.h  NLOdometry.h  NLPhysics.h  NLRamseteFollower.h  NLRobotPose.h
src/main/include/lib/NL/MotionControl/Characterization/: NLCharacterizationTable.h
src/main/include/lib/NL/MotionControl/Path/: NLPathPoint.h  NLPathPrimitives.h
src/main/include/lib/NL/MotionControl/Path/Geometry/: NLPathGeometry.h
src/main/include/lib/NL/MotionControl/Trajectory/: NLTrajectoryKeyState.h  NLTrajectoryPack.h  NLTrajectoryState.h
src/main/include/lib/wrappers/: CANSparkMaxWrapper.h
src/main/include/subsystem/: Hood.h  Shooter.h  ShooterFeedingSystem.h  Turret.h
src/main/include/subsystems/: Camera.h  Climber.h  Conveyor.h  Drivetrain.h  DrivetrainOmni.h  Feeder.h  Gearbox.h  Hood.h  Intake.h  Shooter.h  Turret.h
src/test/cpp/: DrivetrainTest.cpp  Intake.cpp  IntakeTest.cpp  main.cpp
test/.wpilib/: wpilib_preferences.json
